--- a/frontend/shift_up-registration.css
+++ b/frontend/shift_up-registration.css
@@ -5,7 +5,7 @@ h2 {font-family: 'Montserrat', sans-serif;
 p {font-size: 12px;}
 
 input[type=text], select {
-    width: 100%;
+    width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -16,7 +16,7 @@ input[type=text], select {
 
 
 input[type=date], select {
-    width: 100%;
+    width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -26,7 +26,7 @@ input[type=date], select {
 }
 
 input[type=email], select {
-    width: 100%;
+    width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -37,7 +37,7 @@ input[type=email], select {
 
 
 input[type=submit] {
-    width: 100%;
+    width: 50%;
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
@@ -57,18 +57,18 @@ div {
     padding: 20px;
 }
 
-#form {
+/*#form {
     border:5px solid rgb(30, 5, 4);
     width: 30%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
+    /*font-family: 'Open Sans', sans-serif;*/
 }
 
-#fields {
+/*#fields {
     width: 60%;
     margin-left: auto;
     margin-right: auto;
     font-family: 'Open Sans', sans-serif;
-}
+}*/
